# digit-recognition-ml

./: Dockerfile  README copy.md  README.md  config.yml  inference.ipynb  pyproject.toml
.github/workflows/: deploy.yml  train.yml
src/deploy/: deploy_to_sagemaker.py
src/inference/: main.py  model.py  serve.sh  utils.py
src/train/: requirements.txt  sagemaker_train.py  train_script.py  utils.py
