[tool.poetry]
package-mode = false
name = "digit-recognition-demo"
version = "0.1.0"
description = "A project for digit recognition using a custom ML model"
authors = ["Kalyei <k.bakhbergen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.18.0"
fastapi = "^0.111.0"
pillow = "^8.4.0"
uvicorn = "^0.29.0"
sagemaker = "^2.221.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"